--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "first-nodejs",
   "version": "1.0.0",
   "description": "This is our first dive into nodejs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
